[package]
name = "ogonek-gh"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
dotenvy = "0.15.7"
octocrab = "0.49.9"
teloxide = { version = "0.17.0", features = ["macros", "rustls"] }
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
serde_json = "1.0"
